# ipman

./: .gitignore  ipman_db.backup  pyproject.toml  requirements.txt  setup.py
api/: app.py  resolvers.py  schema.py
comm/: app_logging.py  config.py
database/: db.py  models.py
docker/: Dockerfile  Dockerfile.api  Dockerfile.web  docker-compose.yml
docs/: API_DOCS.md  README.md
src/: app.py  app_logging.py  config.py
src/database/: db.py  models.py
src/graphql_api/: resolvers.py  schema.py
src/static/: style.css
src/templates/: index.html  ip_form.html  ip_list.html  service_form.html
tests/: test_app.py
web/: app.py
web/templates/: index.html  ip_form.html  service_form.html  service_list.html
